alteração na página do clube de pontos clube.jsonc

--- a/store-theme/store/blocks/clube.jsonc
+++ b/store-theme/store/blocks/clube.jsonc
@@ -31,7 +31,7 @@
     "props": {
       "textAlignment": "CENTER",
       "textPosition": "CENTER",
-      "text": "O **Clube Musth** é uma plataforma de benefícios desenvolvida para todas as pessoas que queiram se relacionar com a nossa loja virtual.<br/><br/> Participantes do **Clube Musth** acumulam pontos - os ***Elefantinhos*** - a cada compra realizada. Os Elefantinhos acumulados através de suas compras poderão ser trocados nas compras online da **Musth**, sem a necessidade do uso de cartão físico. Para resgatar é necessário identificar-se pelo CPF, ter o cadastro atualizado e estar logado na plataforma.<br/><br/> **Como funciona** <br/><br/> Cada R$1,00 gasto garante 1 elefantinho de recompensa, adquirido pelas compras na **Musth**.<br/><br/> E a cada 100 elefantinhos equivalem a R$3,50 de desconto que podem ser utilizados nas suas compras online."
+      "text": "O **Clube Musth** é uma plataforma de benefícios desenvolvida para todas as pessoas que queiram se relacionar com a nossa loja virtual.<br/><br/> Participantes do **Clube Musth** acumulam pontos - os ***Elefantinhos*** - a cada compra realizada. Os Elefantinhos acumulados através de suas compras poderão ser trocados nas compras online da **Musth**, sem a necessidade do uso de cartão físico. Para resgatar é necessário identificar-se pelo CPF, ter o cadastro atualizado e estar logado na plataforma.<br/><br/> **Como funciona** <br/><br/> Cada R$1,00 gasto garante 1 elefantinho de recompensa, adquirido pelas compras na **Musth**.<br/><br/> E cada elefantinho equivale a R$1,00 de desconto em suas compras online."
     }
   },
   "image#clube": {
